Made the necessary changes

--- a/com.sampleProject.POC/mailconfiguration.properties
+++ b/com.sampleProject.POC/mailconfiguration.properties
@@ -1,6 +1,10 @@
 URL=https://outlook.office365.com/EWS/exchange.asmx
 from_MailID=
-mailPassword=
 to_MailID=
 cc_MailID=
-bcc_MailID=s
+bcc_MailID=
+mailBody =<p>Hello Team,</p>  <p>This email is from the test Automation Framework.</p>  <br> <br>  <i><b>Regards,</i></b><br>  <b>Signaturer</b><br> <p style=\"color:red;\"><i><b>Note:</b> This is auto generated email do not reply.</i></p>
+Subject=Test Automation Email
+needAttachment=No
+pathForAttachments=test-output\\emailable-report.html
+deliveryStatus=No
